All_Component_DX/force-app/main/default/objects/Dispatcher_Access__c/Dispatcher_Access__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to determine the scope of territories and service teams a dispatcher sees in dispatch console. This is especially useful for large organizations with multiple dispatchers where each dispatcher operates within a set of territories and service teams</description>
    <label>Dispatcher Access</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispatcher Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>