All_Component_DX/force-app/main/default/objects/Dispatcher_Access__c/fields/Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the dispatcher that can dispatch to this team or territory. Reference to an existing Salesforce user</description>
    <label>Dispatcher</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dispatcher_Access</relationshipName>
    <type>Lookup</type>
</CustomField>