All_Component_DX/force-app/main/default/objects/Dispatcher_Access__c/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Service Team to grant access to. Reference to an existing Service Team record in ServiceMax</description>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipLabel>Dispatcher Access</relationshipLabel>
    <relationshipName>Dispatcher_Access</relationshipName>
    <type>Lookup</type>
</CustomField>