All_Component_DX/force-app/main/default/objects/Dispatcher_Access__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Territory to grant access to. Reference to an existing Territory record in ServiceMax</description>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Dispatcher Access</relationshipLabel>
    <relationshipName>Dispatcher_Access</relationshipName>
    <type>Lookup</type>
</CustomField>